# korean-international-trade-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: scraper.py
data/: output.csv
scrape/: sample.csv  scrapy.py
