[tool.poetry]
name = "korean-international-trade-scraper"
version = "0.1.0"
description = ""
authors = ["Pablo Mendes Faria <pablomendesfaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.11.10"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
